bug body overflow hidden removed scroll

--- a/002/test.css
+++ b/002/test.css
@@ -91,7 +91,7 @@
   html,
   body {
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   body {
     /* display: flex;
